--- a/templates/public/home/index.html.twig
+++ b/templates/public/home/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Hello HomeController!
+{% endblock %}
 
 {% block body %}
 
-<h1 class="text-purple-500 h1">Accueil</h1>
+	{% include "public/home/components/section_pains.html.twig"%}
 
 {% endblock %}
