--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
 			{% endblock %}
 		{% endblock %}
 	</head>
-	<body class="flex flex-col bg-col-dark">
+	<body class="flex flex-col bg-col-dark min-h-svh">
 
 		{% include "components/header/header.html.twig" %}
 		{% include 'components/spacing.html.twig' %}
@@ -28,5 +28,6 @@
 			</main>
 
 			{% include 'components/spacing.html.twig' %}
+			{% include "components/footer/footer.html.twig" %}
 		</body>
 	</html>
