--- a/templates/components/navbar/navbar.html.twig
+++ b/templates/components/navbar/navbar.html.twig
@@ -10,23 +10,24 @@
 
 <nav class="border-gray-200 ">
 	<div class="flex flex-wrap items-center justify-between customContainer">
-		<a href="https://flowbite.com/" class="relative flex items-center p-1 overflow-hidden rounded-full md:p-3 xs:p-2">
+		<a href="https://flowbite.com/" class="relative flex items-center p-2 overflow-hidden rounded-full">
 			<img src="/images/initiales/logo_remove_bg.png" class="w-[20vw] max-w-[220px] contrast-110 neon" alt="logo delices de la vaunage"/>
-			<div class=" absolute inset-0 bg-[#505050] -z-10"></div>
+			<div class=" absolute inset-0 bg-[#111111] -z-10"></div>
 		</a>
 		<button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden focus:outline-none focus:ring-2 focus:ring-gray-200 " aria-controls="navbar-default" aria-expanded="false">
 			<span class="sr-only">Open main menu</span>
 			<i class="text-3xl fa-solid fa-bars text-col-gold"></i>
 		</button>
-		<div class="hidden w-full md:block md:w-auto" id="navbar-default">
-			<ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:flex-row lg:space-x-8 md:space-x-3 xl:space-x-10 md:mt-0 md:border-0 max-md:bg-neutral-800/20 backdrop-blur-sm md:bg-neutral-100/20 md:py-2">
+		<div class="absolute hidden w-full md:static md:block md:w-auto max-md:top-10 max-md:left-[50%] max-md:translate-x-[-50%] max-md:w-[90vw]" id="navbar-default">
+			<ul class="relative flex flex-col p-4 mt-4 font-medium border rounded-lg md:flex-row lg:space-x-8 md:space-x-3 xl:space-x-10 md:mt-0 md:border-0 max-md:bg-neutral-800/20 backdrop-blur-sm md:bg-neutral-100/20 md:py-2">
 				{% for item in navItems %}
-					<li>
+					<li class="w-3/5">
 						<a href="{{ path (item.path)}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
 							<p class="p">{{item.name}}</p>
 						</a>
 					</li>
 				{% endfor %}
+				<button class="absolute z-10 p-1 font-bold bg-[#333333] rounded-full cursor-pointer md:hidden bottom-5 right-5" type="button" data-collapse-toggle="navbar-default">❌</button>
 			</ul>
 		</div>
 	</div>
