--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 		{% include "components/header/header.html.twig" %}
 		{% include 'components/spacing.html.twig' %}
 
-		<main class="flex-grow"> {% block body %}{% endblock %}
+		<main class="flex flex-col flex-grow"> {% block body %}{% endblock %}
 			</main>
 
 			{% include 'components/spacing.html.twig' %}
