--- a/templates/components/header/header.html.twig
+++ b/templates/components/header/header.html.twig
@@ -3,4 +3,5 @@
 	<div class="relative top-[50%] z-10 translate-y-[-50%]">{% include "components/navbar/navbar.html.twig" %}</div>
 
 
+	<h1 class="w-[100vw] absolute bottom-0 left-1/2 translate-x-[-50%] font-bold text-shadow-lg h1 font-handscript text-col-gold  translate-y-[33%] text-8xl text-center">Les Délices de la Vaunage</h1>
 </header>
