--- a/assets/styles/custom/_polices.scss
+++ b/assets/styles/custom/_polices.scss
@@ -1,22 +1,8 @@
 // style et couleur
 
-/* Utilisation des variables */
-// .bg-clip {
-//   background: linear-gradient(
-//     45deg,
-//     $col2 0%,
-//     $col1 100%
-//   );
-// }
-
-
-// .text-clip {
-//   background: linear-gradient(90deg, $col2 0%, $col6 100%);
-//   -webkit-background-clip: text; /* Ajout du préfixe pour Safari et Chrome */
-//   background-clip: text;
-//   color: transparent;
-// }
-
+.text-shadow-lg {
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.9);
+}
 
 
 // font-size
