--- a/templates/components/footer/footer.html.twig
+++ b/templates/components/footer/footer.html.twig
@@ -1,16 +1,17 @@
+{% include 'components/spacing.html.twig' %}
 <footer class="text-white border-t border-gray-200">
 	<div class="w-full max-w-screen-xl p-4 py-6 mx-auto lg:py-8">
 		<div class="md:flex md:justify-between">
 			<div class="flex flex-col mb-6 md:mb-0 gap-y-2">
 
 				<a class="flex items-center cursor-pointer gap-x-2" href="/">
-                    <div  class="relative flex items-center p-2 overflow-hidden rounded-full">
-                        <img src="/images/initiales/logo_remove_bg.png" class="size-8 contrast-110 neon" alt="logo delices de la vaunage"/>
-                        <div class=" absolute inset-0 bg-[#111111] -z-10"></div>
-                    </div>
-                    <p class="self-center font-semibold h3 whitespace-nowraptext-white">Les Délices de la Vaunage</p>
-                </a>
-				
+					<div class="relative flex items-center p-2 overflow-hidden rounded-full">
+						<img src="/images/initiales/logo_remove_bg.png" class="size-8 contrast-110 neon" alt="logo delices de la vaunage"/>
+						<div class=" absolute inset-0 bg-[#111111] -z-10"></div>
+					</div>
+					<p class="self-center font-semibold h3 whitespace-nowraptext-white">Les Délices de la Vaunage</p>
+				</a>
+
 				<a href="tel:+" class="self-start font-semibold duration-300 p whitespace-nowraptext-white hover:translate-x-3">
 					<i class="mr-2 fa-solid fa-phone"></i>Tel : 04.66.01.02.03</a>
 				<a href="mailto:" class="duration-300 p whitespace-nowraptext-white hover:translate-x-3">
@@ -57,7 +58,8 @@
 		<hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"/>
 		<div class="sm:flex sm:items-center sm:justify-between">
 			<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025
-				<a href="https://www.compagnondecom.fr/" class="hover:underline">Compagon de Com</a>.<a href="/admin"> All Rights Reserved.</a>
+				<a href="https://www.compagnondecom.fr/" class="hover:underline">Compagon de Com</a>.<a href="/admin">
+					All Rights Reserved.</a>
 			</span>
 		</div>
 	</div>
