page accueil ok

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -15,6 +15,13 @@
 // @import "custom";
 // @import "custom";
 
+body {
+    background: 
+        url("../../public/images/initiales/logo_remove_bg_little.png") 0px 0px / 120px 120px repeat,
+        url("../../public/images/initiales/logo_remove_bg_little.png") 60px 60px / 120px 120px repeat,
+        linear-gradient(to right, $col-bg1 50%, white 50%) 0 0 / 100px 100px repeat;
+}
+
 .bg-color{
     background: linear-gradient(90deg, $col-bg1 0%, $col-bg2 100%);
 }
@@ -23,15 +30,17 @@
 }
 
 .customContainer{
-    width:96%;
-    max-width: 1400px;
+    width:94vw;
+    max-width: 1600px;
     margin: 0 auto;
 }
+
 
 .midFlex, .flexMid{
     display: flex;
     justify-content: center;
     justify-items: center;
+    align-items: center;
 
 }
 
