--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -99,6 +99,13 @@
   font-family: "Roboto", sans-serif;
 }
 
+.h6, .h6 div {
+  font-size: clamp(12px, 12px + 0.3vw, 18px);
+  letter-spacing: calc(0.3px + 0.01vw);
+  line-height: clamp(24px, 14px + 0.5vw, 30px);
+  font-family: "Roboto", sans-serif;
+}
+
 .icoFontawesome {
   font-size: clamp(32px, 24px + 2.2vw, 60px);
   color: #f1f1f1;
@@ -114,56 +121,19 @@
 }
 
 .text-shadow {
-  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.7);
+  text-shadow: 1px 1px 3px #000;
 }
 
-.color-shadow-md-navbar {
-  box-shadow: 0px 0px 10px 3px #f1f1f1;
-}
-@media (min-width: 768px) {
-  .color-shadow-md-navbar {
-    box-shadow: none;
-  }
+.customShadow {
+  box-shadow: 5px 5px 15px 5px #505050;
 }
 
-.color-shadow-md {
-  box-shadow: 2px 2px 6px 2px #f1f1f1;
+.customShadowFooter {
+  box-shadow: -5px -5px 15px 5px #505050;
 }
 
-.color-shadow-card {
-  box-shadow: 0px 0px 10px 3px #f1f1f1;
-  transition: all 0.3s ease-in-out;
-}
-.color-shadow-card:hover {
-  box-shadow: 0px 0px 15px 6px #f1f1f1;
-}
-
-.color-shadow-inset-md {
-  box-shadow: inset 0px 0px 10px 3px #f1f1f1;
-}
-
-.color-shadow-lg {
-  box-shadow: 0px 0px 15px 6px #f1f1f1;
-}
-
-.color-shadow-xl {
-  box-shadow: 0px 7px 30px 12px #f1f1f1;
-}
-
-.color-shadow-none {
-  box-shadow: none;
-}
-
-.customShadow-md {
-  box-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
-}
-
-.customShadow-lg {
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-}
-
-.customShadow-xl {
-  box-shadow: 0 0 20px 4px rgba(255, 255, 255, 0.33);
+.sectionNameShadow {
+  box-shadow: 0 0 5px 2px #f1f1f1, inset 0 0 5px 2px #f1f1f1;
 }
 
 header {
@@ -184,7 +154,7 @@ header {
   height: 2px;
   bottom: 1px;
   background-color: #ffc107;
-  transform: translateX(-100%);
+  transform: translateX(-110%);
   transition: all 0.33s ease-in-out;
 }
 
@@ -207,17 +177,6 @@ header {
   box-shadow: 0px 0px 15px 6px #505050, inset 0px 0px 10px 4px #505050;
 }
 
-/* For responsive padding adjustments */
-@media (min-width: 640px) { /* xs breakpoint */
-  .customContainer {
-    padding: 0.75rem 1.5rem; /* xs:p-3 */
-  }
-}
-@media (min-width: 768px) { /* md breakpoint */
-  .customContainer {
-    padding: 0.75rem 2rem; /* md:p-4 */
-  }
-}
 .buttonValidation {
   width: 100%;
   padding: 0.5rem;
@@ -308,6 +267,10 @@ div.customForm > form > div > div > ul > li {
   color: black;
 }
 
+body {
+  background: url("../../public/images/initiales/logo_remove_bg_little.png") 0px 0px/120px 120px repeat, url("../../public/images/initiales/logo_remove_bg_little.png") 60px 60px/120px 120px repeat, linear-gradient(to right, #505050 50%, white 50%) 0 0/100px 100px repeat;
+}
+
 .bg-color {
   background: linear-gradient(90deg, #505050 0%, #545454 100%);
 }
@@ -317,8 +280,8 @@ div.customForm > form > div > div > ul > li {
 }
 
 .customContainer {
-  width: 96%;
-  max-width: 1400px;
+  width: 94vw;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -326,6 +289,7 @@ div.customForm > form > div > div > ul > li {
   display: flex;
   justify-content: center;
   justify-items: center;
+  align-items: center;
 }
 
 .neon {
