--- a/assets/styles/custom/_polices.scss
+++ b/assets/styles/custom/_polices.scss
@@ -48,6 +48,12 @@
   line-height: clamp(30px, calc(24px + 0.66vw), 36px);
   font-family: "Roboto", sans-serif;
 }
+.h6, .h6 div {
+  font-size: clamp(12px, calc(12px + 0.3vw), 18px);
+  letter-spacing: calc(0.3px + 0.01vw);
+  line-height: clamp(24px, calc(14px + 0.5vw), 30px);
+  font-family: "Roboto", sans-serif;
+}
 
 
 
