--- a/templates/components/footer/footer.html.twig
+++ b/templates/components/footer/footer.html.twig
@@ -1,5 +1,5 @@
 {% include 'components/spacing.html.twig' %}
-<footer class="text-white border-t border-gray-200">
+<footer class="text-white border-t border-gray-200 bg-col-dark customShadowFooter">
 	<div class="w-full max-w-screen-xl p-4 py-6 mx-auto lg:py-8">
 		<div class="md:flex md:justify-between">
 			<div class="flex flex-col mb-6 md:mb-0 gap-y-2">
