--- a/templates/components/header/header.html.twig
+++ b/templates/components/header/header.html.twig
@@ -1,7 +1,7 @@
-<header class="relative ">
+<header class="relative customShadow">
 	<div class="absolute inset-0 bg-neutral-800/60"></div>
 	<div class="relative top-[50%] z-10 translate-y-[-50%]">{% include "components/navbar/navbar.html.twig" %}</div>
 
 
-	<h1 class="w-[100vw] absolute bottom-0 left-1/2 translate-x-[-50%] font-bold text-shadow-lg h1 font-handscript text-col-gold  translate-y-[33%] text-8xl text-center">Les Délices de la Vaunage</h1>
+	<h1 class="w-[100vw] absolute bottom-0 left-1/2 translate-x-[-50%] font-bold text-shadow-lg h1 font-handscript text-col-gold  translate-y-[33%] text-8xl text-center max-xl:translate-y-[75%] max-lg:hidden">Les Délices de la Vaunage</h1>
 </header>
