gestions de l'affichage des categories

--- a/templates/components/navbar/navbar.html.twig
+++ b/templates/components/navbar/navbar.html.twig
@@ -1,8 +1,5 @@
 {# les liens de la navbar #}
 {% set navItems = [
-    {'name': 'Pains', 'path': 'app_home'},
-    {'name': 'Gourmandises', 'path': 'app_home'},
-    {'name': 'Sandwichs', 'path': 'app_home'},
     {'name': 'Contact', 'path': 'app_home'},
     {'name': 'Présentation', 'path': 'app_home'},
 ] %}
@@ -20,6 +17,14 @@
 		</button>
 		<div class="absolute hidden w-full md:static md:block md:w-auto max-md:top-10 max-md:left-[50%] max-md:translate-x-[-50%] max-md:w-[90vw]" id="navbar-default">
 			<ul class="relative flex flex-col p-4 mt-4 font-medium border rounded-lg md:flex-row lg:space-x-8 md:space-x-3 xl:space-x-10 md:mt-0 md:border-0 max-md:bg-neutral-800/20 backdrop-blur-sm md:bg-neutral-100/20 md:py-2">
+
+				{% for item in sections %}
+					<li class="w-3/5">
+						<a href="{{ path('app_categorie',{'categorie':item.slug} )}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
+							<p class="capitalize p">{{ item.name | split(' ')[1] }}</p>
+						</a>
+					</li>
+				{% endfor %}
 				{% for item in navItems %}
 					<li class="w-3/5">
 						<a href="{{ path (item.path)}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
