--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -136,6 +136,10 @@
   box-shadow: 0 0 5px 2px #f1f1f1, inset 0 0 5px 2px #f1f1f1;
 }
 
+.text-outline {
+  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black, 3px 3px 6px black;
+}
+
 header {
   width: 100%;
   height: 25vw;
