--- a/assets/styles/custom/_shadow.scss
+++ b/assets/styles/custom/_shadow.scss
@@ -18,3 +18,11 @@
     inset 0 0 5px 2px $col-light1;
   ;
 }
+.text-outline {
+  text-shadow: 
+      -1px -1px 0 black, 
+      1px -1px 0 black,  
+      -1px 1px 0 black,  
+      1px 1px 0 black,
+      3px 3px 6px black;  
+}
