ajout réseaux sociaux

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
 
 		{% include "components/header/header.html.twig" %}
 		{% include 'components/spacing.html.twig' %}
-
+		{% include 'components/links/links.html.twig' %}
 		<main class="flex flex-col flex-grow customContainer"> {% block body %}{% endblock %}
 			</main>
 
