--- a/templates/public/categorie/index.html.twig
+++ b/templates/public/categorie/index.html.twig
@@ -9,7 +9,7 @@
 	{# {{ dump(products) }} #}
 	<h1 class="w-full py-3 mx-auto text-center underline capitalize rounded-2xl h1 font-handscript text-col-gold text-outline text-shadow-lg lg:mt-10 xl:mt-0 underline-offset-8">{{categorie}}
 	</h1>
-	<div class="flex flex-wrap items-stretch justify-center gap-4 mt-6 customContainer md:gap-6 lg:gap-8 md:mt-8 lg:mt-10">
+	<div class="flex flex-wrap items-stretch justify-center gap-8 mt-6 customContainer md:mt-8 lg:mt-10">
         {% for product in products %}
             {% include 'public/categorie/components/card.html.twig' with {'product': product} %}
         {% endfor %}
