--- a/templates/components/links/links.html.twig
+++ b/templates/components/links/links.html.twig
@@ -1,14 +1,14 @@
 <aside class="fixed right-0 top-[39vh] flex flex-col rounded-bl-lg rounded-tl-lg overflow-hidden z-40 customShadow">
 	<a href="https://www.instagram.com/lesdelicesdelavaunage/" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-gradient-to-r from-[#833ab4] via-[#fd1d1d] to-[#fcb045] midFlex ">
-		<i class="text-white fa-brands fa-instagram fa-lg xs:fa-xl md:fa-2xl"></i>
+		<i class="text-white fa-brands fa-instagram fa-xl"></i>
 	</a>
 	<a href="https://www.instagram.com/lesdelicesdelavaunage/" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-[#0866ff] midFlex">
-		<i class="text-white fa-brands fa-square-facebook fa-lg xs:fa-xl md:fa-2xl"></i>
+		<i class="text-white fa-brands fa-square-facebook fa-xl"></i>
 	</a>
-	<a href={{ path ('app_public_contact')}} class="w-8 h-8 bg-purple-800 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex">
-		<i class="text-white fa-solid fa-envelope fa-lg xs:fa-xl md:fa-2xl"></i>
+	<a href={{ path ('app_contact')}} class="w-8 h-8 bg-purple-800 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex">
+		<i class="text-white fa-solid fa-envelope fa-lg"></i>
 	</a>
 	<a href="tel:+0404040404" class="w-8 h-8 bg-green-600 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex">
-		<i class="text-white fa-solid fa-phone fa-lg xs:fa-xl md:fa-2xl"></i>
+		<i class="text-white fa-solid fa-phone fa-lg"></i>
 	</a>
 </aside>
