--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -171,14 +171,33 @@ header {
     display: none;
   }
 }
-.customForm {
+.customForm form {
   max-width: 600px;
+  display: flex;
+  flex-direction: column;
   border-radius: 0.75rem;
   margin: 2rem auto;
   background: linear-gradient(to left, #505050, #545454);
   border: 1px solid #ffc107;
   padding: 0.75rem 1rem;
   box-shadow: 0px 0px 15px 6px #505050, inset 0px 0px 10px 4px #505050;
+}
+.customForm form label {
+  color: #f1f1f1;
+  margin-bottom: 5px;
+}
+.customForm form input,
+.customForm form textarea {
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.btnDisabled {
+  background: #545454;
+  color: #a03131;
+  border: 1px solid #505050;
+  cursor: not-allowed;
+  pointer-events: none;
 }
 
 .buttonValidation {
@@ -187,16 +206,17 @@ header {
   margin: 1.25rem 0;
   font-weight: bold;
   border-radius: 0.5rem;
-  background: #505050;
+  background: #545454;
   color: #f1f1f1;
   transition: all 300ms ease;
   border: 2px solid #f1f1f1;
   box-shadow: 0px 3px 6px #f1f1f1;
+  cursor: pointer;
 }
 
 .buttonValidation:hover {
   background: #f1f1f1;
-  color: #e2e2e2;
+  color: #505050;
   letter-spacing: 0.3px;
   box-shadow: none;
   transform: translateY(3px) scale(0.999);
