--- a/templates/components/links/links.html.twig
+++ b/templates/components/links/links.html.twig
@@ -1,4 +1,4 @@
-<aside class="fixed right-0 top-[39vh] flex flex-col rounded-bl-lg rounded-tl-lg overflow-hidden z-40 customShadow">
+<aside class="fixed right-0 top-[39vh] flex flex-col rounded-bl-lg rounded-tl-lg overflow-hidden z-50 customShadow">
 	<a href="https://www.instagram.com/lesdelicesdelavaunage/" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-gradient-to-r from-[#833ab4] via-[#fd1d1d] to-[#fcb045] midFlex ">
 		<i class="text-white fa-brands fa-instagram fa-xl"></i>
 	</a>
@@ -8,7 +8,53 @@
 	<a href={{ path ('app_contact')}} class="w-8 h-8 bg-purple-800 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex">
 		<i class="text-white fa-solid fa-envelope fa-lg"></i>
 	</a>
-	<a href="tel:+0404040404" class="w-8 h-8 bg-green-600 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex">
+	<a href="tel:+0404040404" class="w-8 h-8 bg-green-600 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex xs:hidden">
 		<i class="text-white fa-solid fa-phone fa-lg"></i>
 	</a>
+
+
+	<!-- Modal toggle -->
+	<button data-modal-target="tel-modal" data-modal-toggle="tel-modal" class="hidden w-8 h-8 bg-green-600 xs:block xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex ">
+		<i class="text-white fa-solid fa-phone fa-lg"></i>
+	</button>
+
+	<!-- Main modal -->
+	<div id="tel-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 bottom-0  z-[99] justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] ">
+		<div
+			class="relative w-full max-w-2xl max-h-full p-4">
+			<!-- Modal content -->
+			<div
+				class="relative bg-white rounded-lg shadow-sm ">
+				<!-- Modal header -->
+				<div class="flex items-center justify-between p-4 border-b border-gray-200 rounded-t md:p-5 ">
+					<h3 class="text-xl font-semibold text-gray-900 ">
+						Nous contacter
+					</h3>
+					<button type="button" class="inline-flex items-center justify-center w-8 h-8 text-sm text-gray-400 bg-transparent rounded-lg hover:bg-gray-200 hover:text-gray-900 ms-auto " data-modal-hide="tel-modal">
+						<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 14 14">
+							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+						</svg>
+						<span class="sr-only">Close modal</span>
+					</button>
+				</div>
+				<!-- Modal body -->
+				<div class="p-4 space-y-4 md:p-5">
+					<p class="text-base leading-relaxed text-gray-500 ">
+						Nous sommes joignables par téléphone au : <br>
+						 09 82 40 41 07
+					</p>
+					<p class="text-base leading-relaxed text-gray-500 ">
+						Horaires : <br>
+						lundi, mardi, jeudi, vendredi et samedi de 6h30 à 18h00 <br>
+						le dimanche de 7h à 13h13
+					</p>
+				</div>
+				<!-- Modal footer -->
+				<div class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5 ">
+					<button data-modal-hide="tel-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700  focus:ring-4 focus:ring-gray-100 ">Fermer</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </aside>
