--- a/templates/public/home/index.html.twig
+++ b/templates/public/home/index.html.twig
@@ -2,13 +2,16 @@
 
 {% block title %}Les Délices de la Vaunage
 {% endblock %}
+{% block description %}
+	Découvrez nos pâtisseries plaines d'amour, nos viennoiseries gourmandes, nos sandwichs généreux et nos pains artisanaux au centre de Calvisson, à côté de la Poste.
+{% endblock %}
 
 {% block body %}
 
 	{% include 'components/spacing.html.twig' %}
 	<div class="flex flex-col w-full mb-10 text-white customShadow customContainer">
 		{% for section in sections  %}
-			<section class="flex w-full [&:nth-child(3)]:flex-row-reverse max-md:flex-col [&:nth-child(3)]:max-md:flex-col [&:nth-child(7)]:flex-row-reverse [&:nth-child(7)]:max-md:flex-col">
+			<section class="flex w-full [&:nth-child(3)]:flex-row-reverse max-md:flex-col-reverse [&:nth-child(3)]:max-md:flex-col-reverse [&:nth-child(7)]:flex-row-reverse [&:nth-child(7)]:max-md:flex-col-reverse">
 				{% include 'public/home/components/section.html.twig' with {'section': section} %}
 			</section>
 			<div class="last-of-type:hidden backdrop-blur-md">
