--- a/templates/public/informations/presentation/index.html.twig
+++ b/templates/public/informations/presentation/index.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PresentationController!{% endblock %}
+{% block title %}
+	Présentation | Les Délices de la Vaunage
+{% endblock %}
+
+{% block description %}
+	Aux Délices de la Vaunage , qui sommes-nous ? Découvrez notre histoire, nos valeurs et notre équipe.
+{% endblock %}
 
 {% block body %}
 <style>
