--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,10 +4,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Les Délices de la Vaunage
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+		<meta name="description" content="{% block description %}Bienvenue sur le Cloud du Compagnon, un espace de partage et de stockage de fichiers en ligne. Inscrivez-vous pour accéder à votre espace de stockage en ligne. L'outil idéal pour stocker des images et des fichiers en ligne pour vos projets FrontEnd.{% endblock %}">
+
+		<link rel="icon" type="image/jpg" href="{{ asset('favico.ico') }}"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" referrerpolicy="no-referrer"/>
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
@@ -32,3 +34,4 @@
 			{% include "components/footer/footer.html.twig" %}
 		</body>
 	</html>
+	
