--- a/templates/public/categorie/components/card.html.twig
+++ b/templates/public/categorie/components/card.html.twig
@@ -1,11 +1,11 @@
-<article class="relative bg-white border rounded-lg border-col-gold w-72 h-96 customShadow">
-	<img class="w-full rounded-t-lg h-52 " src="{{ asset('images/products/' ~ product.image) }}" alt="{{product.name}}"/>
+<article class="relative bg-white border rounded-lg w-[40vw] max-w-[250px]  border-col-gold h-[80vw] max-h-[450px] customShadow min-h-[300px] min-w-[140px]">
+	<img class="object-cover w-full rounded-t-lg aspect-square" src="{{ asset('images/products/' ~ product.image) }}" alt="{{product.name}}"/>
 
-	<div class="p-5 ">
-		<h5 class="mb-2 font-bold tracking-tight text-gray-900 capitalize h4">{{product.name}}</h5>
+	<div class="p-1 xs:p-3 sm:p-5">
+		<h5 class="mb-2 font-bold tracking-tight text-gray-900 capitalize h5 xs:h4">{{product.name}}</h5>
 
-		<p class="mb-3 font-normal text-gray-700 dark:text-gray-400 p">{{product.description | raw}}</p>
+		<div class="mb-3 text-xs font-normal text-gray-700 xs:text-sm sm:text-base">{{product.description | raw}}</div>
 
 	</div>
-    <div class="absolute bottom-0 px-4 py-2 font-bold translate-y-[33%] border rounded-lg customShadow right-2 bg-col-gold h5">{{product.price|price }}</div>
+	<div class="absolute bottom-0 px-4 py-2 font-bold translate-y-[33%] border rounded-lg customShadow right-2 bg-col-gold h5">{{product.price|price }}</div>
 </article>
