--- a/templates/public/contact/index.html.twig
+++ b/templates/public/contact/index.html.twig
@@ -1,8 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Contact | Cloud du Compagnon
+	Contact | Les Délices de la Vaunage
 {% endblock %}
+
+{% block description %}
+	Une question ? une suggestion ? Nous sommes à votre écoute !
+{% endblock %}
+
 
 {% block description %}
 	Une question ? Une suggestion ? Contactez-nous !
