connexion et finitions

--- a/templates/components/navbar/navbar.html.twig
+++ b/templates/components/navbar/navbar.html.twig
@@ -4,7 +4,7 @@
 ] %}
 
 
-<nav class="relative border-gray-200">
+<nav class="relative z-50 border-gray-200">
 	<div class="flex flex-wrap items-center justify-between customContainer">
 		<a href="{{ path ('app_home')}}" class="relative flex items-center p-2 overflow-hidden rounded-full">
 			<img src="/images/initiales/logo_remove_bg.png" class="w-[20vw] max-w-[220px] contrast-110 neon" alt="logo delices de la vaunage"/>
