--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 	</head>
 	<body class="flex flex-col overflow-x-hidden bg-col-dark min-h-svh">
 
-		{% include "components/header/header.html.twig" %}
+		<div class="relative z-50">{% include "components/header/header.html.twig" %}</div>
 		{% include 'components/spacing.html.twig' %}
 		{% include 'components/links/links.html.twig' %}
 		<main class="flex flex-col flex-grow customContainer"> {% block body %}{% endblock %}
@@ -34,4 +34,3 @@
 			{% include "components/footer/footer.html.twig" %}
 		</body>
 	</html>
-	
