--- a/templates/public/categorie/components/card.html.twig
+++ b/templates/public/categorie/components/card.html.twig
@@ -1,11 +1,11 @@
-<article class="relative bg-white border rounded-lg w-[40vw] max-w-[250px]  border-col-gold h-[80vw] max-h-[450px] customShadow min-h-[300px] min-w-[140px]">
+<article class="relative bg-white border rounded-lg w-[40vw] max-w-[250px]  border-col-gold h-[80vw] max-h-[550px] customShadow min-h-[350px] min-w-[140px]">
 	<img class="object-cover w-full rounded-t-lg aspect-square" src="{{ asset('images/products/' ~ product.image) }}" alt="{{product.name}}"/>
 
-	<div class="p-1 xs:p-3 sm:p-5">
+	<div class="flex flex-col justify-between p-1 h-1/2 xs:p-3 sm:p-5">
 		<h5 class="mb-2 font-bold tracking-tight text-gray-900 capitalize h5 xs:h4">{{product.name}}</h5>
 
 		<div class="mb-3 text-xs font-normal text-gray-700 xs:text-sm sm:text-base">{{product.description | raw}}</div>
-
+		<div class="h-1"></div>
 	</div>
 	<div class="absolute bottom-0 px-4 py-2 font-bold translate-y-[33%] border rounded-lg customShadow right-2 bg-col-gold h5">{{product.price|price }}</div>
 </article>
