--- a/templates/components/links/links.html.twig
+++ b/templates/components/links/links.html.twig
@@ -2,7 +2,7 @@
 	<a href="https://www.instagram.com/lesdelicesdelavaunage/" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-gradient-to-r from-[#833ab4] via-[#fd1d1d] to-[#fcb045] midFlex ">
 		<i class="text-white fa-brands fa-instagram fa-xl"></i>
 	</a>
-	<a href="https://www.facebook.com/profile.php?id=61566608924252&sk=photos" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-[#0866ff] midFlex">
+	<a href="https://www.facebook.com/profile.php?id=61566608924252" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-[#0866ff] midFlex">
 		<i class="text-white fa-brands fa-square-facebook fa-xl"></i>
 	</a>
 	<a href={{ path ('app_contact')}} class="w-8 h-8 bg-purple-800 xs:w-10 xs:h-10 md:w-12 md:h-12 midFlex">
