--- a/templates/components/navbar/navbar.html.twig
+++ b/templates/components/navbar/navbar.html.twig
@@ -24,13 +24,13 @@
 						</a>
 					</li>
 				{% endfor %}
-				{% for item in navItems %}
+				{# {% for item in navItems %}
 					<li class="w-3/5">
 						<a href="{{ path (item.path)}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
 							<p class="p">{{item.name}}</p>
 						</a>
 					</li>
-				{% endfor %}
+				{% endfor %} #}
 				<button class="absolute z-10 p-1 font-bold bg-[#333333] rounded-full cursor-pointer md:hidden bottom-5 right-5" type="button" data-collapse-toggle="navbar-default">❌</button>
 			</ul>
 		</div>
