--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,10 +1,30 @@
 {% extends '@EasyAdmin/page/content.html.twig' %}
 
 {% block content %}
-    <section class="p-4">
-        <h1 class="mb-5 text-center">Bienvenue dans l’administration <br> des Délices Vaunage</h1>
-        <h3 class="mb-4">Utiliser le menu pour personnaliser :</h3>
-        <p class="mb-3">1 -> les sections avec les positions, textes descriptifs, images d'accueil et de la page dédiée.</p>
-        <p>2-> les produits qui peuvent être crées mais visibles ou non,<br> ça évite les supressions  pour garder les produits pour plus tard !<br> (exemples : les galettes des rois ou les buches de Noël)</p>
-    </section>
-{% endblock %}
+	<section class="p-4">
+		<h1 class="mb-5 text-center">Bienvenue dans l’administration
+			<br>
+			des Délices de la Vaunage</h1>
+		<h3 class="mb-4">Utiliser le menu pour personnaliser :</h3>
+		<p class="mb-3">1 -> les sections avec les positions les une par rapport aux autre,
+			<br>
+			textes descriptifs,
+			<br>
+			images d'accueil ,
+			<br>
+			visibilité sur le site.
+		</p>
+		<p class="mb-3">2-> les produits qui peuvent être crées mais visibles ou non,<br>
+			ça évite les supressions  pour garder les produits pour plus tard !<br>
+			(exemples : les galettes des rois ou les buches de Noël)<br>Dans la partie produits, on peut filtrer sur la catégorie pour une meilleure visibilité et lecture.</p>
+		<p class="mb-3 p">3 -> pour un site plus rapide à charger, on compresse les images !!!<br>
+			<a href="https://www.iloveimg.com/resize-image">ici par exemple pour redimensionner</a>
+			,plusieurs images en même temps possible.
+			<br>
+			<a href="https://www.iloveimg.com/compress-image">ici par exemple pour compresser</a>
+			, compression de plusieurs images en même temps.
+			<br>
+			une image de 100/150 ko ou kb, c'est bien ! Plus c'est trop !
+			<br>En passant une image en 600px et compressées, on passe de 600ko à 80ko sans trop de perte de qualité mais avec un site plus rapide à charger !</p>
+	</p>
+</section>{% endblock %}
