--- a/assets/styles/custom/_animations.scss
+++ b/assets/styles/custom/_animations.scss
@@ -44,3 +44,59 @@
     transform: rotateY(-360deg);
   }
 }
+
+.apparition-text {
+  animation: tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.61, 0.355, 1)
+    both;
+}
+
+@keyframes tracking-in-expand-fwd {
+  0% {
+    letter-spacing: -0.3em;
+    transform: translateZ(-100px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+.apparition-logo{
+  animation : tracking-apparition 0.5s  forwards 0.3s;
+  opacity: 0;
+}
+
+@keyframes tracking-apparition {
+  from{
+    opacity: 0;
+    transform: translateY(-35px);
+
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.apparition-card{
+
+  animation : tracking-apparition-card 0.5s  forwards 0.3s;
+  opacity: 0;
+
+}
+
+@keyframes tracking-apparition-card {
+  from{
+    opacity: 0;
+    transform: translateY(50px);
+
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
