--- a/templates/public/categorie/components/card.html.twig
+++ b/templates/public/categorie/components/card.html.twig
@@ -1,4 +1,4 @@
-<article class="relative bg-white border rounded-lg w-[40vw] max-w-[250px]  border-col-gold h-[80vw] max-h-[550px] customShadow min-h-[350px] min-w-[140px]">
+<article class="relative bg-white border rounded-lg w-[40vw] max-w-[250px]  border-col-gold h-[80vw] max-h-[550px] customShadow min-h-[350px] min-w-[140px] apparition-card"  style="animation-delay: {{ loop.index0 * 0.2 }}s">
 	<img class="object-cover w-full rounded-t-lg aspect-square" src="{{ asset('images/products/' ~ product.image) }}" alt="{{product.name}}"/>
 
 	<div class="flex flex-col justify-between p-1 h-1/2 xs:p-3 sm:p-5">
