--- a/assets/styles/custom/_shadow.scss
+++ b/assets/styles/custom/_shadow.scss
@@ -7,7 +7,7 @@
 }
 
 .customShadow{
-  box-shadow: 5px 5px 15px 5px $col-bg1;
+  box-shadow: 5px 5px 20px 5px #ffffff80;
 }
 .customShadowFooter{
   box-shadow: -5px -5px 15px 5px $col-bg1;
