--- a/templates/components/links/links.html.twig
+++ b/templates/components/links/links.html.twig
@@ -1,4 +1,4 @@
-<aside class="fixed right-0 top-[39vh] flex flex-col rounded-bl-lg rounded-tl-lg overflow-hidden z-50 customShadow">
+<aside class="fixed left-0 top-[39vh] flex flex-col rounded-br-lg rounded-tr-lg overflow-hidden z-50 customShadow">
 	<a href="https://www.instagram.com/lesdelicesdelavaunage/" target="_blank" class="w-8 h-8 xs:w-10 md:w-12 md:h-12 xs:h-10 bg-gradient-to-r from-[#833ab4] via-[#fd1d1d] to-[#fcb045] midFlex ">
 		<i class="text-white fa-brands fa-instagram fa-xl"></i>
 	</a>
