--- a/templates/public/contact/index.html.twig
+++ b/templates/public/contact/index.html.twig
@@ -36,7 +36,7 @@
 				<button class="buttonValidation" id="btnSendMail">Envoyer le message</button>
 
                 <p class="my-6 text-center p text-col-light">Ou par mail à : <br>
-                contact@maildelicevaunage.fr</p>
+                contact@delices-vaunage.fr</p>
 
                 <p class="mb-2 text-xs text-neutral-400">Nous ne gardons aucune donnée. Votre message et vos coordonnées nous serons transmises uniquement par mail sans que nous ne la collections dans une base de données.</p>
 			</form>
