--- a/templates/public/informations/legal/index.html.twig
+++ b/templates/public/informations/legal/index.html.twig
@@ -20,9 +20,9 @@
 			L'édition du Site est assurée par la société délices vaunage, sarl au capital de 1001 euros,<br>
 			immatriculée au Registre du Commerce et des Sociétés de CALVISSON sous le numéro 789321654<br>
 			dont le siège social est situé au place du centre,<br>
-			Numéro de téléphone : 0606090908<br>
-			Adresse e-mail : alicia@contact.com.<br>
-			N° de TVA intracommunautaire : _______________<br>
+			Numéro de téléphone : 09 82 40 41 07<br>
+			Adresse e-mail : contact@delices-vaunage.fr.<br>
+			N° de TVA intracommunautaire : FR31 930550074<br>
 			Directeur de la publication : Alicia<br>
 			ci-après l'"Editeur".</p>
 		<p class="my-2 p">
