--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,10 +27,21 @@
 		<div class="relative z-50">{% include "components/header/header.html.twig" %}</div>
 		{% include 'components/spacing.html.twig' %}
 		{% include 'components/links/links.html.twig' %}
-		<main class="flex flex-col flex-grow customContainer"> {% block body %}{% endblock %}
-			</main>
+		<main class="relative flex flex-col flex-grow customContainer">
+			<div class="container_alerts">
+				{% for label, messages in app.flashes %}
+					{% for message in messages %}
+						<div class="alert alert-{{ label }} containerForm mx-auto my-4">
+							{{ message }}
+						</div>
+					{% endfor %}
+				{% endfor %}
+			</div>
 
-			{% include 'components/spacing.html.twig' %}
-			{% include "components/footer/footer.html.twig" %}
-		</body>
-	</html>
+			{% block body %}{% endblock %}
+		</main>
+
+		{% include 'components/spacing.html.twig' %}
+		{% include "components/footer/footer.html.twig" %}
+	</body>
+</html>
