--- a/templates/components/navbar/navbar.html.twig
+++ b/templates/components/navbar/navbar.html.twig
@@ -18,19 +18,21 @@
 			<ul class="relative flex flex-col p-4 mt-4 font-medium border rounded-lg md:flex-row lg:space-x-8 md:space-x-3 xl:space-x-10 md:mt-0 md:border-0 max-md:bg-neutral-800/20 backdrop-blur-sm md:bg-neutral-100/20 md:py-2">
 
 				{% for item in sections %}
-					<li class="w-3/5">
-						<a href="{{ path('app_categorie',{'categorie':item.slug} )}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
-							<p class="capitalize p">{{ item.name | split(' ')[1] }}</p>
-						</a>
-					</li>
+					{% if  item.isVisible %}
+						<li class="w-3/5">
+							<a href="{{ path('app_categorie',{'categorie':item.slug} )}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
+								<p class="capitalize p">{{ item.name | split(' ')[1] }}</p>
+							</a>
+						</li>
+					{% endif %}
 				{% endfor %}
 				{# {% for item in navItems %}
-					<li class="w-3/5">
-						<a href="{{ path (item.path)}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
-							<p class="p">{{item.name}}</p>
-						</a>
-					</li>
-				{% endfor %} #}
+									<li class="w-3/5">
+										<a href="{{ path (item.path)}}" class="relative block px-3 py-2 text-col-gold md:p-0 link-navbar" aria-current="page">
+											<p class="p">{{item.name}}</p>
+										</a>
+									</li>
+								{% endfor %} #}
 				<button class="absolute z-10 p-1 font-bold bg-[#333333] rounded-full cursor-pointer md:hidden bottom-5 right-5" type="button" data-collapse-toggle="navbar-default">❌</button>
 			</ul>
 		</div>
