--- a/templates/public/informations/legal/index.html.twig
+++ b/templates/public/informations/legal/index.html.twig
@@ -30,6 +30,8 @@
 		<p class="my-2 p">
 			<span class="my-3 underline h4"><br><br>ACCES AU SITE<br><br></span>Le Site est normalement accessible, à tout moment, à l'Utilisateur. Toutefois, l'Editeur pourra, à tout moment,spendre, limiter ou interrompre le Site afin de procéder, notamment, à des mises à jour ou des modifications de son contenu. L'Editeur ne pourra en aucun cas être tenu responsable des conséquences éventuelles de cette indisponibilité sur les activités de l'Utilisateur.<br><br>
 			Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du Site, sans autorisation expresse de l’Editeur est prohibée et pourra entraîner des actions et poursuites judiciaires telles que prévues par la règlementation en vigueur.</p>
+		<p class="my-2 p">
+			<span class="my-3 underline h4"><br><br>LES PRODUITS PRESENTES<br><br></span>Les produits présentés sur le site fournissent des informations et des disponibilités exactes au moment de leur parution. Des supressions, modifications de prix, nom, compositions et/ou description peuvent ne pas être reportées sur le site. Seul l'affichage en boutique fera foi en cas de questions ou litige. Nous restons joignable par téléphone ou message/mail en cas de questions.</p>
 
 
 	</section>
